// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeWithin fails when given number is within the given bounds of start (inclusive) and end (exclusive) 1`] = `
"expect(received).not.toBeWithin(expected)

Expected number to not be within start (inclusive) and end (exclusive):
  start: 1  end: 3
Received:
  1"
`;

exports[`.toBeWithin fails when given number is not within the given bounds of start (inclusive) and end (exclusive) 1`] = `
"expect(received).toBeWithin(expected)

Expected number to be within start (inclusive) and end (exclusive):
  start: 1  end: 3
Received:
  3"
`;
